feat: dto, entity, repository등 정의 [김태현] (#67)
* refactor: 클래스 이름 변경

- MemberDto -> Member 도메인으로 변경

* refactor: DTO 형태 통일

- Request마다 제각기 다른 Dto를 반환하던 것 전부 특수한 상황 아니면 도메인 DTO로 통일해서 반환

* refactor: DTO 형태 통일

- Request마다 제각기 다른 Dto를 반환하던 것 전부 특수한 상황 아니면 도메인 DTO로 통일해서 반환

* refactor: DTO 형태 통일

- Request마다 제각기 다른 Dto를 반환하던 것 전부 특수한 상황 아니면 도메인 DTO로 통일해서 반환

* refactor: RateDto에 단어 나이도 추가

* feat: dto, entity, repository등 정의

- vocab, word, question, definition, member 등 모델 및 dto 정의